create CRUD and borrow

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,9 +1,13 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+//vue multiselect
+@import "~vue-multiselect/dist/vue-multiselect.min";
+
 // Variables
 @import 'variables';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap.scss';
 @import '~bootstrap-vue/src/index.scss';
+
